# tourmart

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
reproducibility/: DATA_CARD.md  README.md  reproduce_all.sh  requirements.txt  verify.py
results/: gate_history.md  msgcap_v7_batch128_vs_batch32.md  msgcap_v7_probe_vs_qwen_audit.md  msgcap_v7_probe_vs_v6_audit.md  msgcap_v7_seed43_default_vs_v6.md  msgcap_v7_seed43_probe_vs_seed43_default.md  msgcap_v7_symmetric_audit.md  msgcap_v7_v6_vs_qwen_regex_v2.md  phase1c_cap_ablation_v4.md  phase1c_coef_attribution_v4.md  phase1c_llama31_8b_diag_v4_report.episode_seed_manifest.json  phase1c_llama31_8b_diag_v4_report.md  phase1c_llama31_8b_diag_v4_report.raw.jsonl  phase1c_llama31_8b_diag_v4_report.selection_manifest.json  phase1c_llama31_8b_diag_v4_report.with_episode_seed.raw.jsonl  phase1c_qwen14b_awq_diag_v4_report.episode_seed_manifest.json  phase1c_qwen14b_awq_diag_v4_report.md  phase1c_qwen14b_awq_diag_v4_report.raw.jsonl  phase1c_qwen14b_awq_diag_v4_report.selection_manifest.json  phase1c_qwen14b_awq_diag_v4_report.with_episode_seed.raw.jsonl
scripts/: add_episode_seed.py  chain_runner_phase1c_llama_verbose_probe.sh  chain_runner_phase1c_seed43_replication.sh  chain_runner_phase1c_v4.sh  chain_runner_phase1c_v6_llama_ota.sh  diagnostic_yield_and_permutation.py  generate_paper_figures.py  reproduce_permutation.py  run_cap_ablation.py  run_coefficient_attribution.py  run_config.sh.template  run_phase1_judge.py  run_phase1_msgcapture.py  run_phase1_replay.py  run_phase1c_crossfamily.py  (+3 more)
(+32 files in other folders)
